--- a/package.json
+++ b/package.json
@@ -49,12 +49,16 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack -w",
-    "serve": "nodemon dist/server.js"
+    "serve": "nodemon dist/server.js",
+    "web": "node dist/server.js"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.1",
     "@types/csurf": "^1.9.35",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32"
+  },
+  "engines": {
+    "node": "11.11.0"
   }
 }
