--- a/package.json
+++ b/package.json
@@ -13,38 +13,28 @@
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/react-router-dom": "^4.3.1",
-    "axios": "^0.18.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "connect-mongo": "^2.0.3",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
     "css-loader": "^2.1.1",
-    "csurf": "^1.9.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "express-socket.io-session": "^1.3.5",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "mongodb": "^3.2.2",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
-    "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/csurf": "^1.9.35",
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32"
   },
   "scripts": {
     "build": "webpack",
@@ -53,10 +43,19 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "@types/cookie-parser": "^1.4.1",
-    "@types/csurf": "^1.9.35",
-    "@types/socket.io": "^2.1.2",
-    "@types/socket.io-client": "^1.4.32"
+    "socket.io": "^2.2.0",
+    "mongodb": "^3.2.2",
+    "csurf": "^1.9.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5"
+
   },
   "engines": {
     "node": "11.11.0"
