--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-mongo": "^0.0.41",
+    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
+    "@types/csurf": "^1.9.35",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "@types/express-socket.io-session": "^1.3.1",
@@ -13,6 +15,9 @@
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/validator": "^10.9.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -30,11 +35,7 @@
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-node-externals": "^1.7.2",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/csurf": "^1.9.35",
-    "@types/socket.io": "^2.1.2",
-    "@types/socket.io-client": "^1.4.32"
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "build": "webpack",
@@ -43,19 +44,19 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "socket.io": "^2.2.0",
-    "mongodb": "^3.2.2",
-    "csurf": "^1.9.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "express-socket.io-session": "^1.3.5",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5"
-
+    "cors": "^2.8.5",
+    "csurf": "^1.9.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
+    "mongodb": "^3.2.2",
+    "socket.io": "^2.2.0",
+    "validator": "^10.11.0"
   },
   "engines": {
     "node": "11.11.0"
