--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "@types/express-socket.io-session": "^1.3.1",
+    "@types/history": "^4.7.2",
     "@types/mongodb": "^3.1.22",
+    "@types/mustache-express": "^1.2.1",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^16.8.8",
@@ -20,6 +22,7 @@
     "@types/validator": "^10.9.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
+    "history": "^4.9.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
@@ -44,6 +47,7 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@types/helmet": "^0.0.43",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -54,7 +58,9 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
+    "helmet": "^3.16.0",
     "mongodb": "^3.2.2",
+    "mustache-express": "^1.2.8",
     "socket.io": "^2.2.0",
     "validator": "^10.11.0"
   },
