--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
+    "spinkit": "^1.2.5",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.4000",
