--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-thunk": "^2.1.0",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "@types/validator": "^10.9.0",
@@ -31,6 +32,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
     "spinkit": "^1.2.5",
@@ -49,6 +51,7 @@
   },
   "dependencies": {
     "@types/helmet": "^0.0.43",
+    "@types/mailgun-js": "^0.16.3",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -60,6 +63,7 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "helmet": "^3.16.0",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^3.2.2",
     "mustache-express": "^1.2.8",
     "socket.io": "^2.2.0",
