--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.8.3",
     "@types/react-redux": "^7.0.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-logger": "^3.0.7",
     "@types/redux-thunk": "^2.1.0",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
@@ -32,6 +33,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
@@ -47,6 +49,7 @@
     "build": "webpack",
     "watch": "webpack -w",
     "serve": "nodemon dist/server.js",
+    "heroku-local": "nodemon --exec \"heroku local\" --signal SIGTERM",
     "start": "node dist/server.js"
   },
   "dependencies": {
