The beginnings of a widget

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,11 @@
     },
     "exclude": [
         "node_modules"
+    ],
+    "files": [
+        "src/index.tsx"
+    ],
+    "include": [
+        "**/*"
     ]
 }
