--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "zoid": "^9.0.22"
   },
   "scripts": {
     "build": "webpack",
