--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/express-session": "^1.15.12",
     "@types/express-socket.io-session": "^1.3.1",
     "@types/history": "^4.7.2",
+    "@types/lodash": "^4.14.123",
+    "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.22",
     "@types/mustache-express": "^1.2.1",
     "@types/passport": "^1.0.0",
@@ -23,10 +25,14 @@
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "@types/validator": "^10.9.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "history": "^4.9.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
+    "mocha": "^6.1.2",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "react": "^16.8.4",
@@ -48,11 +54,15 @@
     "zoid": "^9.0.22"
   },
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack -w",
-    "serve": "nodemon dist/server.js",
+    "build": "webpack -p",
+    "build:dev": "webpack",
+    "build:tests": "webpack --config test.webpack.config.js",
+    "watch": "webpack -w -p",
+    "watch:dev": "webpack -w",
+    "watch:tests": "webpack -w --config test.webpack.config.js",
     "heroku-local": "nodemon --exec \"heroku local\" --signal SIGTERM",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "mocha tests/all-tests.js"
   },
   "dependencies": {
     "@types/helmet": "^0.0.43",
