--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@ionic/core": "^4.2.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/chai": "^4.1.7",
     "@types/connect-mongo": "^0.0.41",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
@@ -9,11 +10,15 @@
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "@types/express-socket.io-session": "^1.3.1",
+    "@types/helmet": "^0.0.43",
     "@types/history": "^4.7.2",
+    "@types/jsdom": "^12.2.3",
     "@types/lodash": "^4.14.123",
+    "@types/mailgun-js": "^0.16.3",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.22",
     "@types/mongoose": "^5.3.26",
+    "@types/morgan": "^1.7.35",
     "@types/mustache-express": "^1.2.1",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
@@ -23,14 +28,18 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-thunk": "^2.1.0",
+    "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
+    "@types/socketio-jwt": "^0.0.0",
+    "@types/supertest": "^2.0.7",
     "@types/validator": "^10.9.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "history": "^4.9.0",
+    "jsdom": "^14.0.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
     "mocha": "^6.1.2",
@@ -47,6 +56,7 @@
     "socket.io-client": "^2.2.0",
     "spinkit": "^1.2.5",
     "style-loader": "^0.23.1",
+    "supertest": "^4.0.2",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
@@ -63,15 +73,16 @@
     "watch:tests": "webpack -w --config test.webpack.config.js",
     "heroku-local": "nodemon --exec \"heroku local\" --signal SIGTERM",
     "start": "node dist/server.js",
-    "test": "DISABLE_REDUX_LOGGING=TRUE mocha tests/all-tests.js"
+    "start:dev": "USE_TEST_DB=TRUE node dist/server.js",
+    "test": "DISABLE_AUTO_START=TRUE DISABLE_REDUX_LOGGING=TRUE USE_TEST_DB=TRUE DISABLE_CSRF=TRUE mocha tests/all-tests.js"
   },
   "dependencies": {
-    "@types/helmet": "^0.0.43",
-    "@types/mailgun-js": "^0.16.3",
-    "@types/shortid": "^0.0.29",
+    "@types/compression": "^0.0.36",
+    "@types/jsonwebtoken": "^8.3.2",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -80,12 +91,15 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongodb": "^3.2.2",
     "mongoose": "^5.5.1",
+    "morgan": "^1.9.1",
     "mustache-express": "^1.2.8",
     "shortid": "^2.2.14",
     "socket.io": "^2.2.0",
+    "socketio-jwt": "^4.5.0",
     "validator": "^10.11.0"
   },
   "engines": {
