--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-redux": "^7.0.5",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-logger": "^3.0.7",
+    "@types/redux-mock-store": "^1.0.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.2",
@@ -34,6 +35,7 @@
     "@types/socketio-jwt": "^0.0.0",
     "@types/supertest": "^2.0.7",
     "@types/validator": "^10.9.0",
+    "axios-mock-adapter": "^1.16.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "css-loader": "^2.1.1",
@@ -51,12 +53,14 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
     "spinkit": "^1.2.5",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
+    "supertest-session": "^4.0.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
