Add circleci step to install node packages

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install Packages
+          command: yarn install
+      - run:
           name: Build
           command: yarn build
       - run:
