Fix node version in circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: circleci/node:11.11.0-browsers
         environment:
           NODE_ENV: development
           MONGODB_TEST_URI: 'mongodb://root:password@localhost:27017/openChatTest'
