--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/node:11.11.0-browsers
         environment:
           NODE_ENV: development
-          MONGODB_TEST_URI: 'mongodb://root:password@localhost:27017/openChatTest'
+          MONGODB_TEST_URI: 'mongodb://root:password@mongo:27017/openChatTest'
       - image: circleci/mongo:latest
         environment:
           MONGO_INITDB_ROOT_USERNAME: root
