--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,8 @@ jobs:
       - image: circleci/node:11.11.0-browsers
         environment:
           NODE_ENV: development
-          MONGODB_TEST_URI: 'mongodb://root:password@localhost:27017/openChatTest'
+          MONGODB_TEST_URI: 'mongodb://localhost:27017/openChatTest'
       - image: circleci/mongo:latest
-        environment:
-          MONGO_INITDB_ROOT_USERNAME: root
-          MONGO_INITDB_ROOT_PASSWORD: password
     steps:
       - checkout
       - run:
@@ -19,9 +16,12 @@ jobs:
           name: Build
           command: yarn build
       - run:
+          name: Start MongoDB
+          command: docker run --net=host mongo
+      - run:
           name: Wait for DB
           # preinstalled in circleci/* docker image
-          command: dockerize -wait tcp://127.0.0.1:27017 -timeout 60s
+          command: dockerize -wait mongodb://localhost:27017 -timeout 60s
       - run:
           name: Test
           command: yarn test
