Add userController restore and delete methods with mocha tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "target": "es3",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": true,
-        "jsx": "react"
+        "inlineSourceMap": true,
+        "jsx": "react",
+        "outDir": "./dist/"
     },
     "exclude": [
         "node_modules"
